# star-glob

./: .gitignore  CMakeLists.txt  README.md  config.cpp  config.hpp  hash_map.cpp  hash_map.hpp  tape_maker.cpp  tape_maker.hpp  tool_main.cpp  tool_main.hpp
filesystem/: globber.cpp  globber.hpp
